lib/translator/test/fixtures/ok/raw/var-decls.prg
PROGRAM var_declarations
BEGIN
    INT x
    FLOAT y = FLOAT z = 3.5
    BOOL flag = false
    STR txt
END
