lib/translator/test/fixtures/error/raw/duplicated-var.prg
PROGRAM duplicated_variable
BEGIN
    INT x
    FLOAT x
END
